[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "polnet"
version = "0.0.2"
description = "Python package for generating synthetic datasets of the cellular context for Cryo-Electron Tomography."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Antonio Martinez-Sanchez", email = "an.martinez.s.sw@gmail.com"},
]
keywords = ["cryo electron tomogramphy", "synthetic data"]

dependencies = [
    "numpy",
    "scipy",
    "mrcfile",
    "jax",
    "vtk",
    "pandas",
    "pynrrd",
    "scikit-image",
    "jupyter",
    "wget",
    "ipyfilechooser",
    "biopython"
]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[tool.setuptools_scm]
write_to = "polnet/_version.py"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
